# VoiceCare

./: .gitignore  README.md
backend/: .gitignore  calllogs.py  config.py  last_onboarding.json  main.py  onboarding.py  pyproject.toml  scheduler.py  service_agent.py  test.py  test_agent.py  trigger_call.py
backend/models/: __init__.py  casual.py  common.py  emergency.py  onboarding.py  reminder.py
backend/services/: firebase_service.py  profile_service.py  twilio_service.py
mobile/: .gitignore  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/assets/test/: calls.json  rem.json
mobile/ios/Runner/: Info.plist
mobile/lib/: Splash.dart  WelcomeScreen.dart  main.dart
mobile/lib/models/: call_log.dart  reminder.dart  user_profile.dart
mobile/lib/screens/: Splash.dart  aicall_screen.dart  auth_page.dart  auth_screen.dart  call_log_detail_screen.dart  call_log_screen.dart  call_screen.dart  home_screen.dart  login_screen.dart  main_page.dart  onboarding_form_page.dart  profile_page.dart  reminder_detail_screen.dart  setup_screen.dart  sos_page.dart  welcome_screen.dart
mobile/lib/services/: auth_service.dart  call_service.dart  profile_service.dart  setup_service.dart
mobile/lib/utils/: constants.dart
mobile/lib/widgets/: country_code_dropdown.dart  voicecare_app_bar.dart  voicecare_header.dart
mobile/macos/Flutter/: GeneratedPluginRegistrant.swift
mobile/macos/Runner/: Info.plist
mobile/web/: index.html
mobile/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
(+3 files in other folders)
