[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "elevenlabs>=2.27.0",
    "firebase-admin>=7.1.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "google-cloud-firestore>=2.22.0",
    "google-generativeai>=0.8.6",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.2.1",
    "twilio>=9.0.0",
]
